ES6 JSQ CSSQ VUE

--- a/数据结构.md
+++ b/数据结构.md
@@ -40,3 +40,28 @@
 2. 在插入新元素的时候,会考虑该数据的优先级,与其他元素比较优先级,然后再插入队列
 3. 应用:多线程
 4. *实战* : js代码基于数组实现优先级队列
+
+## 链表
+
+1. 链表中的元素在内存中不必是连续的空间.
+2. 链表的每一个元素有一个存储元素本身的节点和一个指向下一个元素的**引用**(指针next),通过此引用将一个个的节点连接起来
+
+    ![20200515114746](https://raw.githubusercontent.com/kakigakki/picBed/master/imgs/20200515114746.png)
+3. 优点:插入和删除数据时,时间复杂度可以达到O(1)
+4. 缺点: 访问任何一个位置的元素时,都需要从头访问
+5. **实战**: 封装一个链表,实现下列操作
+6. 常见操作:
+    - append(element)
+        - 需要判断是否添加的是第一个节点
+    - insert(position,element)
+        - position的越界判断,不为负,不超过length
+        - 需要有current和previous来表示插入之前前的前后节点
+    - get(position)
+    - indexOf(element)
+    - update(position,element)
+    - removeAt(position)
+    - remove(element)
+    - isEmpty()
+    - size()
+    - toString()
+        - 主要是通过current去移动指针
