--- a/数据结构.md
+++ b/数据结构.md
@@ -116,7 +116,7 @@
 
 ## 哈希表
 
-1. 将字符串用哈希函数转为为下标,可以通过字符串快速查找
+1. 将字符串用哈希函数转为为下标,可以通过字符串快速查找,底层采用数组
 2. 产生冲突后,利用`链地址法`或者`开发地址法`进行冲突解决
     - 链地址法:在产生冲突的地方创建链表或者数组,放入新元素
     - 开放地址法: 在产生冲突的地方往下找空地方
@@ -143,3 +143,90 @@
     - 当使用`链地址法`时,loadFactor 是可以大于 1 的(即,元素个数大于哈希表的容量)
     - 但是随着数据量的增多,每一个 index 对应的 bucket 也会越来越长,就造成了效率的低下
     - 一般在扩容因子到达 0.75 的时候,就需要对哈希表进行扩容
+
+## 树结构
+
+1.  优点:
+    -   查找速度为链表,数组快,但是没有哈希表快
+    -   具有哈希表没有的:
+        -   哈希表是无序的,树是有序的
+        -   哈希表无法查找最大值最小值,树可以
+        -   哈希表空间率低的问题(因为底层是数组,利用哈希函数时,开辟的空间往往没有全部利用)
+1.  缺点:
+    -   非平衡树是很容易变成链表,查找效率就从 O(logn)变成了 O(n)
+1.  概念:
+    -   树(tree) :由 n 个节点构成的有限集合
+    -   根(root) : 每个树的根
+    -   子树(subtree) : 每棵树互不相交的子树
+    -   子节点(child)
+    -   父节点(parent)
+    -   度(degree): 节点的字数个数
+    -   树的度 : 树的最大度(如:二叉树就是 2)
+    -   叶节点(leaf) : 没有度的节点
+    -   兄弟节点(sibling)
+    -   路径:一个节点到另一个节点的路径个数
+    -   路径长度: 每条路径的边(相邻节点之间的距离)有几个
+    -   节点的层次(level) : 规定根节点在 1 层,其他任一节点的层数是其父节点的层数+1
+    -   树的深度(depth) : 树中所有节点中的最大层次是这颗树的深度
+
+## 二叉树
+
+1.  衍生: 任何一颗树都可以转换为二叉树
+1.  二叉树中有几个比较重要的特性
+    -   二叉树第 i 层的最大节点数为 2^(i-1)
+    -   深度为 k 的二叉树的最大节点总数为: 2^k-1
+    -   对任何非空二叉树,若 n0 表示叶节点的个数,n2 是度为 2 的节点的个数,那么两者满足关系 n0 = n2+1
+1.  二叉树形态
+
+    -   满二叉树(完美二叉树) : 除叶子节点外,每个节点都有两个子节点
+
+    ![20200711114056](https://raw.githubusercontent.com/kakigakki/picBed/master/imgs/20200711114056.png)
+
+    -   完全二叉树:
+        -   除了最后一层外,其他各层的节点数都达到了最大个数
+        -   且最后一层的叶节点必须是从左到右连续的,只缺右侧的若干个叶
+        -   完美二叉树是特殊的完全二叉树
+
+    ![20200711114239](https://raw.githubusercontent.com/kakigakki/picBed/master/imgs/20200711114239.png)
+
+1.  二叉树的表示方法
+    -   完全二叉树可以用数组表示,且不会造成空间浪费
+    -   非完全二叉树,一般使用链表进行表示
+
+## 二叉搜索树(Binary Search Tree)
+
+        二叉查找树又叫二叉搜索树，
+
+        它或者是一棵空树，或者是具有下列性质的二叉树：
+
+        若它的左子树不空，则左子树上所有结点的值均小于它的根结点的值；
+
+        若它的右子树不空，则右子树上所有结点的值均大于它的根结点的值；
+
+        它的左、右子树也分别为二叉搜索树。
+
+![20200714225931](https://raw.githubusercontent.com/kakigakki/picBed/master/imgs/20200714225931.png)
+
+1.  用链表的结构封装一个二叉搜索树
+    每个节点有`left`,`right`,`key`三个属性
+
+1.  常见操作
+    -   insert(key) : 向树中插入一个新键
+        -   需要判断是否有根节点
+        -   使用递归
+    -   has(key)
+    -   update(old,new)
+    -   inOrderTraversal() :中序遍历 :左子树=>根节点=>右子树 (使用递归)
+    -   preOrderTraversal() : 先序遍历:根节点=>左子树=>右子树 (使用递归)
+    -   postOrderTraversal() :后序遍历:左子树=>右子树=>根节点 (使用递归)
+    -   min
+    -   max
+    -   remove(key)
+        -   情况 1 :是叶子节点
+        -   情况 2 :只有一个子节点
+        -   情况 3:有两个子节点
+
+## 红黑树
+
+1. 平衡的二叉树的一种形态就是红黑树
+1. 因为二叉树在不平衡的时候会变成接近于链表,所以需要将其平衡,就需要红黑树
