--- a/数据结构.md
+++ b/数据结构.md
@@ -230,3 +230,15 @@
 
 1. 平衡的二叉树的一种形态就是红黑树
 1. 因为二叉树在不平衡的时候会变成接近于链表,所以需要将其平衡,就需要红黑树
+1. 红黑树的规则:
+    - 节点是`红色`或者`黑色`
+    - `根节点`是黑色
+    - `叶子节点`都是黑色的`空节点`(null) ,即有数据的节点,肯定不会是`叶子节点`
+    - 每个红色的节点的两个子节点都是黑色(根节点到叶子节点上,不能有两个连续的红色节点)
+    - 从`任一节点`到其`每个叶子`的所有路径都包含相同数目的`黑色节点`
+1. 红黑树的特性:
+    - 从根到叶子的`最长可能路径`,不会超过`最短可能路径`的两倍长
+1. 红黑树插入时,节点变化方式
+    - 变色
+    - 左旋转
+    - 右旋转
